fix(toast): fix alignment foreal

--- a/src/components/toast/Toast.module.scss
+++ b/src/components/toast/Toast.module.scss
@@ -17,6 +17,13 @@
   flex: 1;
   line-height: 24px;
 
+  .toastContent {
+    align-self: center;
+    .toastIcon {
+      align-self: flex-start;
+    }
+  }
+
   &.persistentToast {
     cursor: pointer;
 
@@ -27,7 +34,6 @@
 
   .dismissButton {
     height: 24px;
-    align-self: flex-start;
   }
 
   & svg {
